stoat/src/snapshots/stoat__test_harness__inlay_hints_enabled.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: h
focused: #1 of 1
mode: normal
size: 40x8
---
[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m1[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[1m[38;2;97;175;239m[48;2;40;44;52mlet[0m[38;2;250;250;250m[48;2;40;44;52m x[0m[3m[38;2;171;178;191m[48;2;51;56;66m: u32[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;110;213;222m[48;2;40;44;52m=[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;198;120;221m[48;2;40;44;52m1[0m[38;2;250;250;250m[48;2;40;44;52m                      [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                        [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                        [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                        [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                        [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                        [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                        [0m
[0m[38;2;40;44;52m[48;2;97;175;239m NOR [0m[38;2;250;250;250m[48;2;99;109;131m lsp-did-open-test main.rs [0m[38;2;224;108;117m[48;2;99;109;131minl[0m[38;2;250;250;250m[48;2;99;109;131m 1:1 [0m
